--- a/index.html
+++ b/index.html
@@ -5,67 +5,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Jobaer Hossain - Technical Enablement Specialist</title>
     
-    <!-- Meta Tags -->
-    <meta name="description" content="Jobaer Hossain - Technical Enablement Specialist" />
-    <meta name="keywords" content="Jobaer Hossain, Technical Enablement Specialist, Resume, Contact" />
-    <meta name="author" content="Jobaer Hossain" />
-    <meta name="robots" content="index, follow" />
-    <meta name="googlebot" content="index, follow" />
-    <meta name="google" content="notranslate" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="msapplication-TileColor" content="#000000" />
-    <meta name="msapplication-config" content="browserconfig.xml" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-title" content="Jobaer Hossain" />
-    <meta name="application-name" content="Jobaer Hossain" />
-    <meta name="viewport-fit" content="cover" />
-    <meta name="format-detection" content="telephone=no" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta name="apple-mobile-web-app-title" content="Jobaer Hossain" />
-    <meta name="application-name" content="Jobaer Hossain" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="msapplication-TileColor" content="#000000" />
-    <meta name="msapplication-TileImage" content="asset/img/favicon.png" />
-    <meta name="msapplication-config" content="browserconfig.xml" />
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="@hsjb_info" />
-    <meta name="twitter:title" content="Jobaer Hossain - Technical Enablement Specialist" />
-    <meta name="twitter:description" content="Jobaer Hossain - Technical Enablement Specialist" />
-    <meta name="twitter:image" content="asset/img/profile.jpg" />
-    <meta property="og:title" content="Jobaer Hossain - Technical Enablement Specialist" />
-    <meta property="og:description" content="Jobaer Hossain - Technical Enablement Specialist" />
-    <meta property="og:image" content="asset/img/profile.jpg" />
-    <meta property="og:url" content="https://hsjb.info" />
-    <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Jobaer Hossain" />
-    <meta property="og:locale" content="en_US" />
-    <meta property="og:locale:alternate" content="bn_BD" />
-    <meta property="og:image:alt" content="Jobaer Hossain - Technical Enablement Specialist" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
-    <meta property="og:image:type" content="image/jpeg" />
-    <meta property="og:image:secure_url" content="https://hsjb.info/asset/img/profile.jpg" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
-    <meta property="og:image:alt" content="Jobaer Hossain - Technical Enablement Specialist" />
-    <meta property="og:image:secure_url" content="https://hsjb.info/asset/img/profile.jpg" />
+    <!-- SEO Meta Tags -->
+  <meta name="description" content="Jobaer Hossain - Technical Enablement Specialist" />
+  <meta name="keywords" content="Jobaer Hossain, Technical Enablement Specialist, Resume, Contact" />
+  <meta name="author" content="Jobaer Hossain" />
+  <meta name="robots" content="index, follow" />
+  <meta name="googlebot" content="index, follow" />
+  <meta name="google" content="notranslate" />
+  <meta name="format-detection" content="telephone=no" />
 
-    <!-- Favicon -->
-    <link rel="icon" href="asset/img/favicon.png" type="image/png" />
+  <!-- Theme Meta -->
+  <meta name="theme-color" content="#000000" />
+  <meta name="msapplication-TileColor" content="#000000" />
+  <meta name="msapplication-TileImage" content="asset/img/favicon.png" />
+  <meta name="msapplication-config" content="browserconfig.xml" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="apple-mobile-web-app-title" content="Jobaer Hossain" />
+  <meta name="application-name" content="Jobaer Hossain" />
+  <meta name="viewport-fit" content="cover" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@hsjb_info" />
+  <meta name="twitter:title" content="Jobaer Hossain - Technical Enablement Specialist" />
+  <meta name="twitter:description" content="Jobaer Hossain - Technical Enablement Specialist" />
+  <meta name="twitter:image" content="asset/img/profile.jpg" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Jobaer Hossain - Technical Enablement Specialist" />
+  <meta property="og:description" content="Jobaer Hossain - Technical Enablement Specialist" />
+  <meta property="og:image" content="https://hsjb.info/asset/img/profile.jpg" />
+  <meta property="og:url" content="https://hsjb.info" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Jobaer Hossain" />
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:locale:alternate" content="bn_BD" />
+  <meta property="og:image:alt" content="Jobaer Hossain - Technical Enablement Specialist" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:type" content="image/jpeg" />
+  <meta property="og:image:secure_url" content="https://hsjb.info/asset/img/profile.jpg" />
+
+  <!-- Favicons -->
+  <link href="assets/img/favicon.png" rel="icon">
 
     <!-- Link to CSS -->
     <link rel="stylesheet" href="assets/css/style.css"/>
 
     <!-- Font Awesome Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
-
-    <style>
-      html {
-        scroll-behavior: smooth;
-      }
-    </style>
   </head>
   <body>
     <div class="container">
