--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@ Development</span> <i class="val">85%</i></span>
               <h3 class="resume-title">Professional Experience</h3>
 
               <div class="resume-item">
-                <h4>Subject Matter Expert, Network & Systems</h4>
+                <h4>Subject Matter Expert, Networking</h4>
                 <h5>May 2025 - Present</h5>
                 <p><em>InComIT Training Academy, Dhaka</em></p>
               </div>
@@ -480,7 +480,7 @@ Development</span> <i class="val">85%</i></span>
               </div>
 
               <div class="resume-item">
-                <h4>Subject Matter Expert, Networking</h4>
+                <h4>Principal Technical Trainer, Networking</h4>
                 <h5>July 2024 - Present</h5>
                 <p><em>Intrex Digital Learning Hub, Dhaka</em></p>
               </div>
@@ -492,7 +492,7 @@ Development</span> <i class="val">85%</i></span>
               </div>
 
               <div class="resume-item">
-                <h4>Principal Technical Trainer</h4>
+                <h4>Principal Technical Trainer, Networking</h4>
                 <h5>August 2023 - September 2024</h5>
                 <p><em>One Sky Information Technology, Dhaka</em></p>
               </div>
